# music-dashboard

./: .gitignore  README.md  com.benjamin.musicdashboardrefresh.plist  com.benjamin.musicdashboardsync.plist  pyproject.toml  run_sync.sh
audit_export/: 1_tracks_current.csv  2_artist_mapping.csv  3_primary_artist_totals.csv  4_year_breakdown.csv
bootstrap/: export_audit_csvs.py  seed_country_ledger.py
dashboard/: app.js  style.css
data/: artist_country_seed.csv  music.db
data/aggregates/: country_plays.json  country_year.json  genre_plays.json  genre_year.json  kpis.json  month_year.json  pending_artists.json  play_history.json  top_artists.json  tracks.json  year_artist.json
docs/: app.js  index.html  style.css
docs/data/: aggregates.json
pipeline/: build_data.py  db.py  enrich.py  extract_library.applescript  refresh_server.py  sync.py
